--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -19,7 +19,14 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
-            <version>2.1.3.RELEASE</version>
+            <version>3.1.9</version>
+        </dependency>
+
+        <!-- Spring Cloud LoadBalancer: 使 lb://service-name 路由生效 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
+            <version>3.1.3</version>
         </dependency>
         
         <!-- Nacos 服务发现 -->
