--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -4,18 +4,28 @@ server:
 spring:
   application:
     name: gateway-service
+
+  config:
+    import: optional:nacos:gateway-service.yml
+
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: 192.168.200.129:8848
       config:
-        server-addr: localhost:8848
+        server-addr: 192.168.200.129:8848
         file-extension: yml
+
     gateway:
       discovery:
         locator:
           enabled: true
           lower-case-service-id: true
+      # 全局超时配置
+      httpclient:
+        connect-timeout: 10000
+        response-timeout: 30s
+      # 路由配置
       routes:
         # 用户服务路由
         - id: user-service
@@ -23,69 +33,49 @@ spring:
           predicates:
             - Path=/api/user/**
           filters:
-            - StripPrefix=2
+            - StripPrefix=0
         # 认证服务路由
         - id: auth-service
           uri: lb://auth-service
           predicates:
             - Path=/api/auth/**
-          filters:
-            - StripPrefix=2
         # 动态服务路由
         - id: post-service
           uri: lb://post-service
           predicates:
             - Path=/api/post/**
-          filters:
-            - StripPrefix=2
         # 活动服务路由
         - id: event-service
           uri: lb://event-service
           predicates:
             - Path=/api/event/**
-          filters:
-            - StripPrefix=2
         # 聊天服务路由
         - id: chat-service
           uri: lb://chat-service
           predicates:
             - Path=/api/chat/**
-          filters:
-            - StripPrefix=2
         # AI审核服务路由
         - id: ai-audit-service
           uri: lb://ai-audit-service
           predicates:
             - Path=/api/audit/**
-          filters:
-            - StripPrefix=2
         # 消息服务路由
         - id: message-service
           uri: lb://message-service
           predicates:
             - Path=/api/message/**
-          filters:
-            - StripPrefix=2
         # 推荐服务路由
         - id: recommend-service
           uri: lb://recommend-service
           predicates:
             - Path=/api/recommend/**
-          filters:
-            - StripPrefix=2
-      globalcors:
-        cors-configurations:
-          '[/**]':
-            allowedOrigins: "*"
-            allowedMethods: "*"
-            allowedHeaders: "*"
-            allowCredentials: true
+
 
 # Redis 配置
   redis:
     host: localhost
     port: 6379
-    password: 
+    password:
     database: 0
     timeout: 5000ms
     jedis:
